# embedded-fcfs

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  cmock_config.yml  codecov.yml
cmake/: cmock.cmake
inc/: fcfs.h
mocks/: Mockevents.c  Mockevents.h
src/: CMakeLists.txt  fcfs.c
test/: CMakeLists.txt  README.md  events.h  test.c
